# django-base-kit

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
core/: settings.py
django_base_kit/: __init__.py  admin.py  apps.py  forms.py  models.py  urls.py  views.py
django_base_kit/migrations/: 0001_initial.py
django_base_kit/templates/: change_password.html  login.html  signup.html
django_base_kit/templates/email_templates/: reset_password_email_template.html
django_base_kit/templates/password_reset/: reset_password_complete.html  reset_password_confirm.html  reset_password_done.html  reset_password_form.html
