[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-base-kit"
version = "0.1.4"
description = "A reusable Django bootstrap kit with UUID base models, a custom user model, and authentication views."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Thiago Azevedo", email = "thiagoarvore@gmail.com" }
]
keywords = ["django", "authentication", "forms", "admin", "auditlog", "bootstrap"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "Django>=4.2",
    "django-widget-tweaks",
    "django-auditlog",
]

[project.optional-dependencies]
dev = [
    "build",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/thiagoarvore/django-base-kit"
Repository = "https://github.com/thiagoarvore/django-base-kit"
Issues = "https://github.com/thiagoarvore/django-base-kit/issues"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["django_base_kit*"]
exclude = ["core*"]
namespaces = false

[tool.setuptools.package-data]
django_base_kit = [
    "templates/*.html",
    "templates/*/*.html",
    "templates/*/*/*.html",
]

[tool.ruff]
line-length = 88
target-version = "py310"
